--- a/src/App.css
+++ b/src/App.css
@@ -72,3 +72,13 @@ p {
   top: 0;
   overflow-x: hidden;
 }
+
+.settings-page {
+  background-color: #2F4858;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  overflow-x: hidden;
+}
