--- a/src/App.css
+++ b/src/App.css
@@ -82,3 +82,10 @@ p {
   top: 0;
   overflow-x: hidden;
 }
+
+.sign {
+  background-color: #2F4858;
+  margin: 30px;
+  padding: 30px;
+  border-radius: 10px;
+}
