--- a/src/App.css
+++ b/src/App.css
@@ -83,8 +83,8 @@ p {
   overflow-x: hidden;
 }
 
-.sign {
-  background-color: #2F4858;
+
+.form {
   margin: 30px;
   padding: 30px;
   border-radius: 10px;
