--- a/src/App.css
+++ b/src/App.css
@@ -9,34 +9,29 @@ p {
 /* Split the screen in half */
 .split {
   height: 100%;
-  width: 50%;
   position: fixed;
   z-index: 1;
   top: 0;
   overflow-x: hidden;
   padding-top: 20px;
+}
+
+.split-huge {
+  width: 80%;
 }
 
 .split-big {
-  height: 100%;
   width: 66.66%;
   width: calc(100% * 3/5);
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  overflow-x: hidden;
-  padding-top: 20px;
 }
 
 .split-small {
-  height: 100%;
   width: 33.33%;
   width: calc(100% * 2/5);
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  overflow-x: hidden;
-  padding-top: 20px;
+}
+
+.split-tiny {
+  width: 20%;
 }
 
 /* Control the left side */
@@ -61,18 +56,6 @@ p {
 
 .logo {
   text-align: center;
-}
-
-
-
-.settings-page {
-  background-color: #2F4858;
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  overflow-x: hidden;
 }
 
 .form {
@@ -156,4 +139,22 @@ p {
 .forum-post-date {
   color: #F8FCDA;
   text-align: right;
+}
+
+.settings-menu {
+  margin: 5%;
+  padding: 5%;
+  text-align: center;
+}
+
+.settings-button {
+  margin: 5%;
+  padding: 5%;
+  text-align: center;
+}
+
+.settings-button:hover {
+  background-color: #243742;
+  cursor: pointer;
+  font-size: 105%;
 }
