--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,11 @@ p {
   color: #F8FCDA;
 }
 
+input {
+  border: none;
+  background-color: #86BBD8;
+}
+
 /* Split the screen in half */
 .split {
   height: 100%;
@@ -57,6 +62,11 @@ p {
 .landing-position {
   margin-top: 25%;
   margin-left: 5%;
+}
+
+.landing-form {
+  display: flex;
+  flex-direction: column;
 }
 
 .forum-page {
@@ -142,30 +152,30 @@ p {
   text-align: center;
 }
 
-.settings-button {
-  margin: 5%;
-  padding: 5%;
-  text-align: center;
-}
-
-.settings-button:hover {
-  background-color: #243742;
-  cursor: pointer;
-  font-size: 105%;
-}
-
 .settings-dangerous {
   color: #D20F1F;
   font-weight: bold;
 }
 
-.submenu-button {
+.button-small {
+  margin: 5%;
+  padding: 5%;
+  text-align: center;
+}
+
+.button-small:hover {
+  background-color: #243742;
+  cursor: pointer;
+  font-size: 105%;
+}
+
+.button-large {
   margin: 2% 5% 2% 5%;
   padding: 2% 5% 2% 5%;
   text-align: center;
 }
 
-.submenu-button:hover {
+.button-large:hover {
   background-color: #65A9CD;
   cursor: pointer;
   font-size: 105%;
