--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,6 @@ p {
   color: #F8FCDA;
 }
 
-input {
-  border: none;
-  background-color: #86BBD8;
-}
-
 /* Split the screen in half */
 .split {
   height: 100%;
@@ -26,13 +21,11 @@ input {
 }
 
 .split-big {
-  width: 66.66%;
-  width: calc(100% * 3/5);
+  width: 60%;
 }
 
 .split-small {
-  width: 33.33%;
-  width: calc(100% * 2/5);
+  width: 40%;
 }
 
 .split-tiny {
@@ -51,22 +44,67 @@ input {
   background-color: #86BBD8;
 }
 
-.landing {
-  text-align: center;
-}
-
-.logo {
-  text-align: center;
-}
-
 .landing-position {
-  margin-top: 25%;
-  margin-left: 5%;
+  width: 100%;
+  margin-top: 35%;
+}
+
+.landing-logo {
+  text-align: center;
+}
+
+.landing-description {
+  padding-left: 25%;
+  width: 50%;
+  text-align: center;
 }
 
 .landing-form {
+  width: 100%;
+  margin-top: 45%;
   display: flex;
   flex-direction: column;
+}
+
+.form-header {
+  text-align: center;
+}
+
+.input-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.input-text {
+  margin-left: 30%;
+  width: 40%;
+  height: 40px;
+  text-align: center;
+  border: 2px outset #65A9CD;
+  background-color: #F8FCDA;
+}
+
+.input-label {
+  margin-left: 30%;
+  width: 40%;
+  text-align: left;
+  color: #F8FCDA;
+}
+
+.input-button {
+  margin-top: 2%;
+  margin-left: 36%;
+  padding: 2% 0%;
+  width: 30%;
+  text-align: center;
+  background-color: #86BBD8;
+  border: 2px outset #65A9CD;
+}
+
+.input-button:hover {
+  background-color: #65A9CD;
+  cursor: pointer;
+  font-size: 105%;
 }
 
 .forum-page {
@@ -170,6 +208,7 @@ input {
 }
 
 .button-large {
+  background-color: #86BBD8;
   margin: 2% 5% 2% 5%;
   padding: 2% 5% 2% 5%;
   text-align: center;
