--- a/src/App.css
+++ b/src/App.css
@@ -32,18 +32,18 @@ p {
   width: 20%;
 }
 
-/* Control the left side */
+/* split side */
 .left {
   left: 0;
   background-color: #2F4858;
 }
 
-/* Control the right side */
 .right {
   right: 0;
   background-color: #86BBD8;
 }
 
+/* landing page css */
 .landing-position {
   width: 100%;
   margin-top: 35%;
@@ -61,9 +61,20 @@ p {
 
 .landing-form {
   width: 100%;
-  margin-top: 45%;
   display: flex;
   flex-direction: column;
+}
+
+/* 
+  its taking me too long to figure out how to match the heights on these divs without doing this
+  will need to figure out how to make this in a neater way
+*/
+.signin-margin {
+  margin-top: 45%;
+}
+
+.signup-margin {
+  margin-top: 40%;
 }
 
 .form-header {
