--- a/src/App.css
+++ b/src/App.css
@@ -165,14 +165,19 @@ p {
 
 .forum-profile {
   width: 20%;
-  margin-top: 16px;
-  margin-right: 2%;
+  margin: 16px 2%;
+  border-radius: 5px;
   right: 0;
-  text-align: right;
+  text-align: center;
 }
 
 .forum-profile:hover {
   cursor: pointer;
+  background-color: #65A9CD;
+}
+
+.forum-profile-text {
+  color: #F8FCDA;
 }
 
 .forum-post {
