--- a/src/App.css
+++ b/src/App.css
@@ -206,6 +206,11 @@ p {
   text-align: center;
 }
 
+.settings-header {
+  padding: 1% 8%;
+  text-align: left;
+}
+
 .settings-dangerous {
   color: #D20F1F;
   font-weight: bold;
