--- a/src/App.css
+++ b/src/App.css
@@ -212,6 +212,29 @@ p {
   text-align: left;
 }
 
+.settings-line {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 1% 5%;
+  border-bottom: 2px solid #2F4858;
+}
+
+.settings-label {
+  width: 30%;
+}
+
+.settings-inputtext {
+  width: 30%;
+  background-color: #86BBD8;
+  color: #F8FCDA;
+  border: none;
+}
+
+.settings-inputtext:focus {
+  background-color: #65A9CD;
+}
+
 .settings-dangerous {
   color: #D20F1F;
   font-weight: bold;
@@ -231,8 +254,8 @@ p {
 
 .button-large {
   background-color: #86BBD8;
-  margin: 2% 5% 2% 5%;
-  padding: 2% 5% 2% 5%;
+  margin: 1% 5%;
+  padding: 2% 5%;
   text-align: center;
 }
 
