--- a/src/App.css
+++ b/src/App.css
@@ -203,6 +203,7 @@ p {
 .post-text {
   width: 100%;
   height: 120px;
+  font-size: 18px;
   box-sizing: border-box;
   border-radius: 4px;
   color: #F8FCDA;
@@ -213,6 +214,14 @@ p {
 
 .post-text:focus {
   background-color: #65A9CD;
+}
+
+.post-text:invalid {
+  border: 2px solid #D20F1F;
+}
+
+.post-text:placeholder-shown {
+  border: 2px outset #65A9CD;
 }
 
 .post-submit {
